<resources>
    <string name="app_name">FitMe</string>
    <string name="logo">FM</string>

    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date">Date</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="neck">Neck</string>
    <string name="waist">Waist</string>
    <string name="hip">Hip</string>
    <string name="weight">Weight</string>
    <string name="weightMeasure">Kg</string>
    <string name="calculate">Calculate</string>

    <string name="bustSize">Bust Size:</string>
    <string name="waistSize">Waist Size:</string>
    <string name="hipSize">Hip Size:</string>
    <string name="highHipSize">High Hip Size:</string>
    <string name="mainMeasurement">\'</string>
    <string name="subMeasurement">\'\'</string>
    <string name="cancel">Cancel</string>

    <string name="yes">Okay</string>
    <string name="no">Cancel</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <string name="lbl_AddBmi">Calculate New BMI</string>
    <string name="btnBack"><![CDATA[<]]></string>
    <string name="lbl_Height">"Height : "</string>
    <string name="lbl_Weight">Weight :</string>
    <string name="lbl_hFeet">feet</string>
    <string name="lbl_hInches">inches</string>
    <string name="lbl_WKg">kg</string>
    <string name="lbl_UpdateBmi">Update BMI Record</string>
    <string name="lbl_ViewBmi">My BMI Records</string>
    <string name="btnCalc">Calculate BMI</string>
    <string name="btnAddR">Add Record to History</string>
    <string name="lbl_BmiVal">BMI</string>
    <string name="lbl_category">Category :</string>
    <string name="lbl_DateOfRecord">Date :</string>
    <string name="dateOfR">2020/08/15</string>
    <string name="feetOfR">5</string>
    <string name="inchesOfR">7</string>
    <string name="weightOfR">57</string>
    <string name="bmiOfR">20.32</string>
    <string name="btnUpdate">Update Record</string>
    <string name="btnDelete">Delete Record</string>


    <!-- Login.xml resources-->
    <string name="email_Input_Hint_Login">Email</string>
    <string name="passWord_Hint">Password</string>
    <string name="Log_In_Label">Log In</string>
    <string name="LoginBtnLabel">Login</string>
    <string name="RegisterBtnLabel">Need an account? Register</string>
    <string name="app_Name_In_Main">FitMe</string>
    <string name="register_btn_main_screen">Register</string>
    <string name="UserNameInHeader">John</string>
    <!--    -->

    <!--  Home.fragment resource  -->
    <string name="bmi_function">BMI Calculator</string>
    <string name="daily_calorie_function">Daily Calorie Calculator</string>
    <string name="body_fat_calculation_function">Body Fat Calculator</string>
    <string name="body_shape_function">Body Shape Calculator</string>
    <!--    -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Register Activity    -->
    <string name="register_label">Register</string>
    <string name="user_name_input">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account? Log In</string>
    <!---->

    <!-- calculate_daily_calorie_intake-->
    <string name="AgeLabelCalorie">Age</string>
    <string name="AgeHint">Age in years</string>
    <string name="GenderLabelCalorie">Gender</string>
    <string name="HeightFeetHint">Feet</string>
    <string name="HeightInchesHint">Inches </string>
    <string name="weightInputHintCalorie">Kg</string>
    <string name="activityLabelCalorie">Activity Level</string>
    <string name="typeOfPersonLabel">What type of person you are?</string>
    <string name="calculate_dci_button_label">Calculate Daily Calorie Intake</string>
    <string name="bt_label_save_results">Save Results</string>
    <string name="bt_cancel_calculated_results">cancel</string>
    <string name="result_dialog_title">Recommended Daily Calorie Intake</string>
    <string name="bt_update_label">Update</string>
    <string name="bt_delete_label">delete</string>

    <!--Spinner Items-->
    <string-array name="type_Of_Person">
        <item>Fatty Person</item>
        <item>Lean Body Builder</item>
        <item>Normal Person</item>
    </string-array>

    <string-array name="Activity_Level">
        <item>Sedentary</item>
        <item>Light Active</item>
        <item>Moderate Active</item>
        <item>Very Active</item>
    </string-array>

    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <!--    -->



    <string name="category">Category</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>

</resources>