<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bmi.viewBmiRecords">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:alpha="0.75"
        android:background="@drawable/background2"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </RelativeLayout>

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="412dp"
        android:layout_height="75dp"
        android:background="#AFF459"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="#AFF459"
            android:onClick="backToMainPage"
            android:tint="#000000"
            app:srcCompat="@drawable/abc_vector_test" />

        <TextView
            android:id="@+id/tv_t_AddBmi"
            android:layout_width="321dp"
            android:layout_height="76dp"
            android:paddingLeft="50dp"
            android:paddingTop="25dp"
            android:text="@string/lbl_ViewBmi"
            android:textColor="#000000"
            android:textSize="24sp" />
    </TableRow>

    <Button
        android:id="@+id/btn_calcNew"
        android:layout_width="343dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#CCCD7E"
        android:onClick="calculateNewBmi"
        android:text="@string/lbl_AddBmi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow" />

    <androidx.cardview.widget.CardView
        android:id="@+id/recordContainer"
        android:layout_width="345dp"
        android:layout_height="180dp"
        android:layout_marginTop="25dp"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_calcNew">

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/lbl_DateOfRecord"
        android:textColor="#020000"
        app:layout_constraintStart_toStartOf="@+id/recordContainer"
        app:layout_constraintTop_toTopOf="@+id/recordContainer" />

    <TextView
        android:id="@+id/dateOfR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/dateOfR"
        android:textColor="#020000"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_date"
        app:layout_constraintStart_toEndOf="@+id/tv_date" />

    <TextView
        android:id="@+id/lblHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/lbl_Height"
        android:textColor="#020000"
        app:layout_constraintStart_toStartOf="@+id/tv_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_date" />

    <TextView
        android:id="@+id/lblWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/lbl_Weight"
        android:textColor="#020000"
        app:layout_constraintStart_toStartOf="@+id/lblHeight"
        app:layout_constraintTop_toBottomOf="@+id/lblHeight" />

    <TextView
        android:id="@+id/tv_hFeetOfR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/feetOfR"
        android:textColor="#020000"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblHeight"
        app:layout_constraintStart_toEndOf="@+id/lblHeight" />

    <TextView
        android:id="@+id/lbl_hFeet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/lbl_hFeet"
        android:textColor="#020000"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblHeight"
        app:layout_constraintStart_toEndOf="@+id/tv_hFeetOfR" />

    <TextView
        android:id="@+id/tv_hInchesOfR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/inchesOfR"
        android:textColor="#020000"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblHeight"
        app:layout_constraintStart_toEndOf="@+id/lbl_hFeet" />

    <TextView
        android:id="@+id/lbl_hInches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/lbl_hInches"
        android:textColor="#020000"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblHeight"
        app:layout_constraintStart_toEndOf="@+id/tv_hInchesOfR" />

    <TextView
        android:id="@+id/tv_weightOfR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/weightOfR"
        android:textColor="#020000"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblWeight"
        app:layout_constraintStart_toEndOf="@+id/lblWeight" />

    <TextView
        android:id="@+id/lbl_wKg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/lbl_WKg"
        android:textColor="#020000"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblWeight"
        app:layout_constraintStart_toEndOf="@+id/tv_weightOfR" />

    <TextView
        android:id="@+id/lbl_bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/lbl_BmiVal"
        android:textColor="#020000"
        app:layout_constraintStart_toStartOf="@+id/lblWeight"
        app:layout_constraintTop_toBottomOf="@+id/lblWeight" />

    <TextView
        android:id="@+id/tv_bmiOfR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/bmiOfR"
        android:textColor="#020000"
        app:layout_constraintBaseline_toBaselineOf="@+id/lbl_bmi"
        app:layout_constraintStart_toEndOf="@+id/lbl_bmi" />

    <TextView
        android:id="@+id/lbl_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/lbl_category"
        android:textColor="#020000"
        app:layout_constraintStart_toStartOf="@+id/lbl_bmi"
        app:layout_constraintTop_toBottomOf="@+id/lbl_bmi" />

    <TextView
        android:id="@+id/tv_categoryOfR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/bmiOfR"
        android:textColor="#020000"
        app:layout_constraintBaseline_toBaselineOf="@+id/lbl_category"
        app:layout_constraintStart_toEndOf="@+id/lbl_category" />

    <Button
        android:id="@+id/buttonU"
        android:layout_width="136dp"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#CCCD7E"
        android:onClick="updateBmi"
        android:text="@string/btnUpdate"
        app:layout_constraintEnd_toStartOf="@+id/buttonD"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/recordContainer"
        app:layout_constraintTop_toBottomOf="@+id/lbl_category" />

    <Button
        android:id="@+id/buttonD"
        android:layout_width="135dp"
        android:layout_height="37dp"
        android:layout_marginStart="38dp"
        android:backgroundTint="#CCCD7E"
        android:onClick="deleteBmi"
        android:text="@string/btnDelete"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonU"
        app:layout_constraintEnd_toEndOf="@+id/recordContainer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonU" />


</androidx.constraintlayout.widget.ConstraintLayout>