<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addBmiRecord">

    <TableRow
    android:id="@+id/tableRow"
    android:layout_width="412dp"
    android:layout_height="75dp"
    android:background="#AFF459"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="#AFF459"
            android:onClick="openBmiHistory"
            android:tint="#000000"
            app:srcCompat="@drawable/abc_vector_test" />

        <TextView
            android:id="@+id/tv_t_AddBmi"
            android:layout_width="321dp"
            android:layout_height="76dp"
            android:paddingLeft="40dp"
            android:paddingTop="25dp"
            android:text="@string/lbl_AddBmi"
            android:textColor="#000000"
            android:textSize="24sp" />
    </TableRow>

    <TextView
        android:id="@+id/tv_st_Height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="90dp"
        android:text="@string/lbl_Height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="30dp"
        android:text="@string/lbl_Weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_st_Height" />

    <EditText
        android:id="@+id/etHFeet"
        android:layout_width="54dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_st_Height"
        app:layout_constraintStart_toEndOf="@+id/tv_st_Height" />

    <EditText
        android:id="@+id/etHInches"
        android:layout_width="53dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_st_Height"
        app:layout_constraintStart_toEndOf="@+id/tv_il_Feet" />

    <TextView
        android:id="@+id/tv_il_Feet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/lbl_hFeet"
        app:layout_constraintBaseline_toBaselineOf="@+id/etHFeet"
        app:layout_constraintStart_toEndOf="@+id/etHFeet" />

    <TextView
        android:id="@+id/tv_il_Inches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/lbl_hInches"
        app:layout_constraintBaseline_toBaselineOf="@+id/etHInches"
        app:layout_constraintStart_toEndOf="@+id/etHInches" />

    <EditText
        android:id="@+id/etWKg"
        android:layout_width="55dp"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
        app:layout_constraintStart_toEndOf="@+id/textView11" />

    <TextView
        android:id="@+id/tv_il_Kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/lbl_WKg"
        app:layout_constraintBaseline_toBaselineOf="@+id/etWKg"
        app:layout_constraintStart_toEndOf="@+id/etWKg" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="291dp"
        android:layout_height="46dp"
        android:layout_marginTop="100dp"
        android:onClick="calculateBmi"
        android:text="@string/btnCalc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <Button
        android:id="@+id/button3"
        android:layout_width="291dp"
        android:layout_height="46dp"
        android:layout_marginTop="70dp"
        android:onClick="addNewBmiRecord"
        android:text="@string/btnAddR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_BmiValue" />

    <TextView
        android:id="@+id/tv_BmiValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/lbl_BmiVal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculate" />

</androidx.constraintlayout.widget.ConstraintLayout>